--- a/meu-projeto/static/style.css
+++ b/meu-projeto/static/style.css
@@ -1,13 +1,11 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
-    background-image: url("./assets/bg.jpg") ;
+    background-image: url("{{ url_for('static', filename='assets/bg.jpg') }}"); 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
@@ -24,15 +22,18 @@ header {
 }
 
 header img {
+
+    max-width: 100%;
     width: 15rem;
+    height: auto; 
 }
 
 main {
     max-width: 36rem;
-    width: 70%;
+    width: 90%; 
     margin: 3rem auto;
 }
-/*Cor da borda*/
+
 section {
     background-image: linear-gradient(90deg, #ec1111 0%, #b7f60d 50%, #e41494 100%);
     border-radius: 0.625rem;
@@ -72,22 +73,25 @@ main section {
     }
 }
 form {
-  display: flex;
-  gap: 0.85rem;
-  flex-wrap: wrap;
-  margin: 1.25rem 0;
+    display: flex;
+    gap: 0.85rem;
+    flex-wrap: wrap;
+    margin: 1.25rem 0;
 }
 
 input,
 select {
-  all: unset;
-  border-radius: 0.5rem;
-  padding: 0.675rem;
-  font-size: 0.875rem;
-  background-color: #00000066;
+    all: unset;
+    border-radius: 0.5rem;
+    padding: 0.675rem;
+    font-size: 0.875rem;
+    background-color: #00000066;
+    flex-grow: 1; 
+    min-width: 150px; 
 }
 button {
-    width: 100%;
+    
+    width: 100%; 
     border: 0;
     background-image: linear-gradient(90deg, #ec1111 0%, #b7f60d 50%, #e41494 100%);
     padding: 0.675rem;
@@ -131,7 +135,6 @@ button.disabled {
     display: none;
 }
 
-
 .loading {
     animation: pulse 1s infinite;
 }
@@ -139,7 +142,26 @@ button.disabled {
     50% {
         opacity: 0.5;
     }
-
-
 }
 
+@media (max-width: 600px) {
+    main {
+        width: 95%; 
+        margin: 1.5rem auto; 
+    }
+    
+    section > div {
+        padding: 1.5rem; 
+    }
+
+    input,
+    select {
+        min-width: unset; 
+        width: 100%; 
+    }
+
+    form {
+        flex-direction: column; 
+        gap: 1rem;
+    }
+}
