--- a/meu-projeto/templates/index.html
+++ b/meu-projeto/templates/index.html
@@ -31,8 +31,9 @@
                         <option value="fortnite">Fortnite</option>
                         <option value="free fire">Free Fire</option>
                         <option value="league of Legends">League of Legends</option>
-                        <option value="Minecraft">Minecraft</option>
                         <option value="mobile legends">Mobile Legends</option>
+                        <option value="Minecraft">Minecraft</option>
+                        <option value="roblox">Roblox</option>
                         <option value="terraria">Terraria</option>
                         <option value="valorant">Valorant</option>
                     </select>
